RPC原型功能校验